--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 		<version>2.1.5.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.shopsoko.services</groupId>
+	<groupId>me.gilo</groupId>
 	<artifactId>order</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>OrderService</name>
