--- a/usecases/pom.xml
+++ b/usecases/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>order</artifactId>
-        <groupId>com.shopsoko.services</groupId>
+        <groupId>me.gilo</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -12,7 +12,7 @@
     <artifactId>usecases</artifactId>
     <dependencies>
         <dependency>
-            <groupId>com.shopsoko.services</groupId>
+            <groupId>me.gilo</groupId>
             <artifactId>core</artifactId>
             <version>0.0.1-SNAPSHOT</version>
             <scope>compile</scope>
